control-plane/k8s/api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: control-plane-apiserver
  namespace: cloud-nlb
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`control-plane-apiserver.local`)
      kind: Rule
      services:
        - name: control-plane-apiserver
          port: 9090
          scheme: h2c
